# bullet-pod

./: .gitignore  CMakeLists.txt  Makefile  bullet_double_precision_patch.diff  bullet_gjk_accuracy_patch.diff  bullet_use_btGjkConvexCast_patch.diff  bullet_windows_pkgconfig.diff  install_prereqs.sh  postinstall.cmake
patches/: CMakeLists.txt  README
patches/src/BulletCollision/NarrowPhaseCollision/: btGjkPairDetector.cpp
patches/src/LinearMath/: CMakeLists.txt
